--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name="org.walleth.activities.InfoActivity"/>
         <activity android:name="org.walleth.activities.DebugWallethActivity"/>
         <activity android:name="org.walleth.activities.OfflineTransactionActivity"/>
+        <activity android:name="org.walleth.activities.TrezorCommunicatorActivity"/>
         <activity android:name="org.walleth.activities.ImportActivity"/>
         <activity android:name="org.walleth.activities.ExportKeyActivity"/>
         <activity android:name="org.walleth.activities.EditAccountActivity"/>
