--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,12 +108,13 @@ dependencies {
 
     compile "org.ethereum:geth:1.6.6"
 
-    compile 'com.github.ligi:kethereum:0.10'
+    compile 'com.github.ligi.kethereum:functions:0.13'
+    compile 'com.github.ligi.kethereum:bip44:0.16'
 
     compile 'com.github.ligi:tracedroid:1.4'
     compile 'com.github.ligi:KAXT:0.17'
-    compile 'com.github.ligi:KAXTUI:0.3'
-    compile 'com.github.trezor.trezor-android:trezor-lib:v1.0.4'
+    compile 'com.github.ligi:KAXTUI:0.4'
+    compile 'com.github.trezor.trezor-android:trezor-lib:v1.0.6'
 
 
     compile 'com.github.kenglxn.QRGen:android:2.2.0'
