--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,7 +103,9 @@ configurations {
 }
 
 dependencies {
-    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:multidex:1.0.2'
+    androidTestCompile  'com.android.support:multidex:1.0.2'
+
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     compile "org.ethereum:geth:1.6.7"
